# xxbot-lite

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: __init__.py  config.py  db.py  main.py
bot/commands/: __init__.py  xian.py
bot/data/: __init__.py  artifact_affixes.py  artifacts.py  fates.py  proving_ground.py  proving_ground_enemies.py  realms.py  resource_sites.py  spirits.py  tower.py
bot/models/: __init__.py  arena_state.py  artifact.py  base.py  character.py  ladder_record.py  player.py  proving_ground_run.py  sect.py  world_resource_site.py
bot/services/: artifact_service.py  breakthrough_service.py  broadcast_service.py  character_service.py  combat_service.py  faction_service.py  fate_service.py  idle_service.py  ladder_service.py  proving_ground_service.py  pvp_service.py  ranking_service.py  sect_service.py  spirit_service.py  tower_service.py  (+1 more)
migrations/: env.py
specs/: 00-当前实现口径.md  01-角色与基础成长规格.md  01a-境界基础属性表.md  02-挂机与气机规格.md  03-通天塔与突破规格.md  04-命格与轮回规格.md  05-论道榜与战斗规格.md  06-技术栈与工程约束.md  07-开发骨架与落地顺序.md  08-本命法宝词条与洗炼规格.md  09-游历与奇遇规格.md  10-后续扩展系统路线.md  11-器灵与神通规格.md  12-轻量宗门与资源争夺规格.md  discord-xianbot-v1-dev-guide.md  xianbot-codex-implementation-prompt-v0.md  xianbot-faction-system-v0.md  xianbot-fate-mechanism-whitelist-v0.md  xianbot-fate-pool-v0.md
tests/: conftest.py  test_artifact_affixes.py  test_core_flow.py  test_discord_component_limits.py  test_migrations.py  test_proving_ground.py  test_spirit_powers.py
xxbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+18 files in other folders)
